# bistro-news

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml
.claude/: harness-log.py  settings.json
docs/: 2026-06-17_기획-작업-요약.md  onboarding.html
docs/assets/: causal_graph.dot
docs/spec/: README.md
eval/: README.md  add_article.py  extract_from_xlsx.py  models.example.json  report.md  run_extraction.py  score.py
eval/gold/: gold.json
eval/predictions/: bok_rate_hold_20260410__ref_claude4step.json  cpi_may_20260602__ref_claude4step.json  hormuz_toll_20260408__legacy_claude_sonnet46.json  hormuz_toll_20260408__legacy_hcx007.json  hormuz_toll_20260408__legacy_hcx32b_think.json  hormuz_toll_20260408__new4step_hcx32b.json  hormuz_toll_20260408__ref_claude4step.json  semicon_tariff_20260118__ref_claude4step.json  transit_tf_20260408__legacy_claude_sonnet46.json  transit_tf_20260408__legacy_hcx007.json  transit_tf_20260408__legacy_hcx32b_think.json  transit_tf_20260408__new4step_hcx32b.json  transit_tf_20260408__ref_claude4step.json
prompts/: README.md  legacy_single.md  step_a_core.md  step_b_background.md  step_c_consequence.md  step_d_critic.md
schemas/: event_schema.json
src/bistro_news/: __init__.py  io.py
src/bistro_news/cluster/: README.md  __init__.py
src/bistro_news/extract/: __init__.py  pipeline.py
src/bistro_news/graph/: README.md  __init__.py
src/bistro_news/index/: README.md  __init__.py
src/bistro_news/ingest/: README.md  __init__.py
src/bistro_news/llm/: __init__.py  client.py  prompts.py
(+2 files in other folders)
